...
                                    <action selector="reverseButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e4f-3I-QW6"/>
                                </connections>
                            </button>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="LQy-Th-qGy">
                                <rect key="frame" x="16" y="336" width="358" height="32"/>
                                <segments>
                                    <segment title="Default"/>
                                    <segment title="Custom"/>
                                </segments>
                                <connections>
                                    <action selector="segmentControllerChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="imL-Ub-mGC"/>
                                </connections>
                            </segmentedControl>
                            <textField hidden="YES" opaque="NO" contentMode="scaleToFill" restorationIdentifier="textIgnoreTF" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Text to ignore" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bwa-FH-zoZ">
                                <rect key="frame" x="16" y="386" width="358" height="18.666666666666686"/>
                                <accessibility key="accessibilityConfiguration">
                                    <accessibilityTraits key="traits" staticText="YES"/>
                                </accessibility>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QUY-Kj-ImQ" secondAttribute="trailing" constant="169" id="zd9-ii-WGm"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="AllCharactersExceptionLabel" destination="jmq-Pd-Zk8" id="B7P-1B-5hn"/>
                        <outlet property="infoLabel" destination="O6u-JA-p3T" id="hTk-1b-QEr"/>
                        <outlet property="inputTF" destination="43F-SG-pHM" id="LH1-fz-QxO"/>
                        <outlet property="nameLabel" destination="vTR-Zc-AZ3" id="oks-ks-ckZ"/>
                        <outlet property="resultLabel" destination="Xol-xW-zTh" id="Lfq-7J-DmP"/>
                        <outlet property="reverseButtonOutlet" destination="Vpr-3i-SeW" id="TCo-Ke-DU0"/>
                        <outlet property="segmentControllerOutlet" destination="LQy-Th-qGy" id="hsx-1p-y5S"/>
                        <outlet property="textIgnoreTF" destination="Bwa-FH-zoZ" id="gp6-YU-6Ap"/>
                        <outlet property="topBackground" destination="fWG-fT-8hC" id="gfH-oW-jmn"/>
                        <outlet property="topLabel" destination="ZlD-kG-dpj" id="t6r-Co-vao"/>
                    </connections>
...
